# sp

./: .clangd  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Justfile  Makefile  README.md  analyze_sp_alloc.py  build.md  build_wasm.sh  hello.c  notes.md  sp.h  sp_libc.h  spn.lock.lua  spn.lua  spn.toml  test.c  test_sp_libc  test_sp_libc.c  wasm_build.sh
.github/: VOUCHED.td
.spackle/: spackle.py
doc/: README.md  ansi_colors.md  api_catalog.md  api_categories.md  bump_allocator.md  c_strings_only_at_api_boundaries.md  carr_for.md  command_dispatch_table.md  compound_literals.md  context_allocator.md  context_as_app_member.md  cpp_path_operators.md  cstring_boundaries.md  custom_format_types.md  dyn_array_of_strings.md  dynamic_array.md  enum_names.md  error_avoid_nesting.md  error_bail_if_fatal.md  error_cleanup_pattern.md  error_fatal_pattern.md  error_recoverable_pattern.md  error_return_bool_if_recoverable.md  file_monitor.md  format_extension_options.md  format_string.md  global_state_management.md  hash_functions.md  hash_short_display.md  hash_table.md  init_cleanup_symmetry.md  logging.md  macro_utilities.md  named_constants.md  output_color_indicates_status.md  parse_numbers.md  path_operations.md  prefer_colored_output.md  process_output_parsing.md  qsort_compare.md  (+22 more)
example/: app.c  array.c  cli.c  elf.c  embed.c  format.c  hash_table.c  io.c  io_copy_perf.c  ls.c  msvc.c  palette.c  prompt.c  prompt_fancy.c  signal.c  wc.c  zero_copy.c
example/prompt/: CMakeLists.txt
examples/: ansi_colors.c  bump_allocator.c  c_strings_only_at_api_boundaries.c  carr_for.c  compound_literals.c  context_allocator.c  dynamic_array.c  enum_names.c  error_avoid_nesting.c  file_monitor.c  format_string.c  hash_functions.c  logging.c  macro_utilities.c  parse_numbers.c  path_operations.c  qsort_compare.c  ring_buffer.c  sdl_integration.c  string_literal.c  string_map.c  string_padding.c  string_prefix_checking.c  string_slicing.c  switch_over_if.c  switch_patterns.c  test_macros.c  thread_sync.c  zero_initialize.c
sp/: asset.h  elf.h  glob.h  math.h  msvc.h  prompt.h  sp_asset.h  sp_cli.h  sp_elf.h  sp_glob.h  sp_macho.h  sp_math.h  sp_msvc.h  sp_prompt.h
test/: README_FORMAT_EXTEND.md  amalg.c  app.c  array.c  asset.c  builtin.c  cli.c  compile.c  context.c  core.c  custom_format.c  cv.c  elf.c  env.c  etc.c  example_custom_fmt.c  file_monitor.c  fmon.c  fmt.c  fmt_extension_example.c  fmt_extension_improved.c  fmt_extension_prototypes.c  format.c  freestanding.c  freestanding_env.c  fs.c  gdb.c  gdb_fixture.c  glob.c  glob.h  ht.c  io.c  leak.c  linkage.c  main.c  math.c  mem.c  nostdlib.c  process.c  process.h  (+12 more)
(+226 files in other folders)
